# ml_life

./: pyproject.toml  requirements.txt  video-based-fight-detection-using-deep-learning.ipynb
