[tool.poetry]
name = "fight"
version = "0.1.0"
description = ""
authors = ["margosq <slava1kvartovkin@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.6"
requests = "^2.31.0"
seaborn = "^0.13.0"
imageio = "^2.31.6"
ipywidgets = "^8.1.1"
ipykernel = "^6.26.0"
scikit-video = "^1.1.11"
opencv-python = "^4.8.1.78"
scikit-learn = "^1.3.2"
keras = "^2.14.0"
tensorflow = "^2.14.0"
numpy = "1.23.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
